# dioxus-template

./: .env.development  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
.github/workflow-templates/: ci.yml  deploy.yml
.github/workflows/: ci.yml  deploy.yml
.sqlx/: query-06217cc1d40b391344b4f06cc3a3736bc9637a5cfb82b4fab3bc9ab55cd869a0.json  query-09a7e2fd3600104f2669d6ffb89288e358e327f568e46fd51e1f5472c3c656ad.json  query-2161fc1c78cc5fcf9e8a80c118399346c9d8a1b3dab0fd52b789ced325c7bcc2.json  query-2173633dc59976ccb652e989ce35297de175d8fba5efae0aceacd149b654727d.json  query-396726a6206d9d3150f2ee66265fb21bf586426152c4a5e31cbb8fd9ba3c665e.json  query-6bd741520f93da7e5ebddc0865bed7ae8a624663c7fe89f25952513036ead986.json  query-7ec0221a815805a4efeaef3a361f8cbf56b914cf33d9ca48e2ebc6326e718aa7.json  query-88db23c0ba8fb58ad7ec20501948a83be7a1e508836efa87e6f388ade724352f.json  query-d1c01d5cb3dbcaccb7744abf9de2471cb195756bd34639716df0d469fec2242e.json  query-e1db905f4ceddf73622c4981565375f9881886e64404fd7e9f4819b475a5161a.json
crates/app/: Cargo.toml
crates/app/assets/: cyberpunk-theme.css  variables.css
crates/app/src/: auth.rs  main.rs  routes.rs
crates/app/src/routes/: dashboard.css  dashboard.rs  layout.css  login.css  login.rs  mod.rs  products.css  products.rs  register.rs  settings.css  settings.rs  users.css  users.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  db.rs  error_convert.rs  health.rs  lib.rs  openapi.rs  rest.rs  s3.rs  telemetry.rs
crates/server/src/auth/: cookies.rs  extractors.rs  jwt.rs  middleware.rs  mod.rs  oauth.rs  oauth_callback.rs  oauth_state.rs
crates/server/tests/: api_tests.rs  auth_tests.rs
crates/server/tests/common/: mod.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: error.rs  lib.rs  models.rs  requests.rs
crates/shared-ui/: Cargo.toml
crates/shared-ui/assets/: variables.css
crates/shared-ui/src/: button.css  button.rs  card.css  card.rs  input.css  input.rs  layout.css  layout.rs  lib.rs  theme.rs
crates/shared-ui/src/components/: mod.rs
crates/shared-ui/src/components/accordion/: component.rs  style.css
crates/shared-ui/src/components/alert_dialog/: component.rs  style.css
crates/shared-ui/src/components/aspect_ratio/: component.rs
crates/shared-ui/src/components/badge/: component.rs
crates/shared-ui/src/components/calendar/: component.rs  style.css
crates/shared-ui/src/components/card/: component.rs  style.css
crates/shared-ui/src/components/checkbox/: component.rs
crates/shared-ui/src/components/collapsible/: component.rs  style.css
crates/shared-ui/src/components/context_menu/: component.rs  style.css
crates/shared-ui/src/components/date_picker/: component.rs
crates/shared-ui/src/components/dialog/: component.rs  style.css
crates/shared-ui/src/components/dropdown_menu/: component.rs  style.css
crates/shared-ui/src/components/form/: component.rs
crates/shared-ui/src/components/hover_card/: component.rs  style.css
crates/shared-ui/src/components/input/: component.rs
crates/shared-ui/src/components/label/: component.rs
crates/shared-ui/src/components/menubar/: style.css
crates/shared-ui/src/components/navbar/: component.rs  style.css
crates/shared-ui/src/components/popover/: component.rs  style.css
crates/shared-ui/src/components/progress/: component.rs
crates/shared-ui/src/components/radio_group/: component.rs
crates/shared-ui/src/components/scroll_area/: component.rs
crates/shared-ui/src/components/select/: component.rs  style.css
crates/shared-ui/src/components/separator/: component.rs
crates/shared-ui/src/components/sheet/: component.rs  style.css
crates/shared-ui/src/components/sidebar/: component.rs  style.css
crates/shared-ui/src/components/skeleton/: component.rs
crates/shared-ui/src/components/switch/: component.rs
crates/shared-ui/src/components/tabs/: component.rs
crates/shared-ui/src/components/textarea/: component.rs
crates/shared-ui/src/components/toast/: component.rs
crates/shared-ui/src/components/toggle/: component.rs  style.css
crates/shared-ui/src/components/toggle_group/: component.rs  style.css
crates/shared-ui/src/components/toolbar/: component.rs
crates/shared-ui/src/components/tooltip/: component.rs  style.css
