[workspace]
members = [
    "crates/shared-types",
    "crates/shared-ui",
    "crates/server",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-ssr = "0.7"
dioxus_style = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
pretty_assertions = "1"
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid"] }
