[workspace]
members = [
    "crates/shared-types",
    "crates/shared-ui",
    "crates/server",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-ssr = "0.7"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", features = ["router", "web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
pretty_assertions = "1"
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "util", "propagate-header"] }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "5"
urlencoding = "2"
cookie = { version = "0.18", features = ["percent-encode"] }
