[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
shared-types = { path = "../shared-types" }
shared-ui = { path = "../shared-ui" }
server = { path = "../server" }
serde = { workspace = true }

[features]
default = []
server = ["server/server", "dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
