[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
shared-types = { path = "../shared-types" }
shared-ui = { path = "../shared-ui" }
server = { path = "../server" }
serde = { workspace = true }
base64 = { workspace = true }
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
tower-http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[features]
default = []
server = ["server/server", "dioxus/server", "dep:tower-http", "dep:axum"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
